# Initial

./: .gitignore  1.cpp  15-15_map.txt  CMakeLists.txt  Game  MAIN  MainEngine  Makefile  Map_loader.cpp  Map_loading.cpp  README.md  base.cpp  game  inventory.txt  inventory2.cpp  inventory3  s  saved_game.txt  start_time.txt
CharactersDesign_Mechanism/: Character.txt  Enginev2  MainEngine.cpp  MainEngine.h  MainEngine3.cpp  MapLoader.h  chair + table.txt  character2.txt  character3.txt  doorcoordinate.cpp  doorcoordinate.h  startpage.txt  walls.txt
CharactersDesign_Mechanism/Character_Ghosts.resources/: ghost2.txt  ghostfinal.txt  ghots.txt
Characters_Design&Mechanism/: Enginev1.cpp  MainEngine.cpp  MainEngine.h  MapLoader.h
Main_directory/: MAIN.cpp
Map&Objects/: Map_loading.cpp  Map_loading_save.cpp  bed.txt  bench.txt  room.txt  sofa2.txt  sofa3.txt  sofa4.txt  toolbox.txt
Map_Objects/: Map_loading.cpp  Map_loading_save.cpp  deskandchair.txt  sofa_with_lamp.txt
Map_Objects/Map_resources/: 15-15_Testing.txt  15-15_map.txt  Chat Box.txt  Classroom 1.txt  Classroom 2.txt  Classroom 3.txt  Classroom 4.txt  Classroom 5.txt  Classroom 6.txt  Classroom.txt  Club Room 1.txt  Club Room 2.txt  Club Room 3.txt  Club Room 4.txt  Club Room 5.txt  Club Room 6.txt  Club Room copy.txt  Club Room.txt  Dining Room 1.txt  Dining Room 2.txt  Dining Room 3.txt  Dining Room 4.txt  Dining Room 5.txt  Dining Room 6.txt  Diningroom.txt  Music Room 2.txt  Music Room 4.txt  Music Room 6.txt  Music Room.txt  Restroom 1.txt  Restroom 2.txt  Restroom 3.txt  Restroom 4.txt  Restroom 5.txt  Restroom 6.txt  Restroom.txt  Rooftop Stairs.txt  Rooftop stairs.txt  Rooftop.txt  Rooftop2.txt  (+35 more)
Map_Objects/Rooms/: Club Room 1.txt  Club Room 2.txt  Club Room 4.txt  Club Room 5.txt  Dining Room 1.txt  Dining Room 3.txt  Dining Room 5.txt  Dining Room 6.txt  Music Room 1.txt  Music Room 3.txt  Music Room 5.txt  Restroom 2.txt  Restroom 3.txt  Teacher's office 2.txt  Teacher's office 3.txt  Teacher's office 4.txt  Teacher's office 6.txt  clubroom.cpp  diningroom.cpp  musicroom.cpp  restroom.cpp  teachers.cpp
Random_Spawn/: Classroom.cpp  Clubroom.cpp  Diningroom.cpp  Musicroom.cpp  Restroom.cpp  Teacher.cpp
UI/: base2.cpp  chatbox1.txt  deathpage.txt  endingpage.txt  inventory.txt  inventory3  inventory3.cpp  startpage.cpp  startpage2  startpage2.cpp
UI/chatboxintro/: chatboxclick.txt  chatboxfound.txt  chatboxfound1.txt  chatboxfound2.txt  chatboxfound3.txt  chatboxintro1.txt  chatboxintro2.txt  chatboxintro3.txt  chatboxintro4.txt  chatboxintro5.txt  chatboxintro6.txt  chatboxintro7.txt  chatboxneed.txt  chatboxout.txt
